--- a/siak/web/WEB-INF/pages/jabatan/jabatanList.zul
+++ b/siak/web/WEB-INF/pages/jabatan/jabatanList.zul
@@ -42,10 +42,10 @@
                                     width="30%"/>
                     </listhead>
 
-                    <listitem self="@{each='jabatan'}" value="@{jabatan}"
+                    <listitem self="@{each='jabatanhaha'}"
                               forward="onDoubleClick=onDoubleClickedJabatanItem">
 
-                        <listcell label="@{jabatan.ckdjabatan}"
+                        <listcell label="@{jabatanhaha.ckdjabatan}"
                                   style="padding-left: 5px"/>
                         <listcell label="@{jabatan.cnmjabatan}"
                                   style="padding-left: 5px"/>
