--- a/trunk/siak/web/WEB-INF/pages/administrasi/grade/GradeMain.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/grade/GradeMain.zul
@@ -41,7 +41,7 @@
 
                         <label value="KODE"
                                style="padding-right: 3px"/>
-                        <textbox id="txtb_Grade_No" width="60px" maxlength="2" style="text-transform:uppercase"/>
+                        <textbox id="txtb_Grade_No" width="60px" maxlength="2" />
                         <button id="button_GradeList_SearchNo"
                                 height="24px" image="/images/icons/search.gif"
                                 tooltiptext="${c:l('button_GradeList_SearchNo.tooltiptext')}"/>
@@ -49,7 +49,7 @@
 
                         <label value="GRADE"
                                style="padding-right: 3px"/>
-                        <textbox id="txtb_Grade_Name" width="100px" maxlength="2" style="text-transform:uppercase"/>
+                        <textbox id="txtb_Grade_Name" width="100px" maxlength="2" />
                         <button id="button_GradeList_SearchName"
                                 height="24px" image="/images/icons/search.gif"
                                 tooltiptext="${c:l('button_GradeList_SearchName.tooltiptext')}"/>
