--- a/trunk/siak/web/WEB-INF/pages/administrasi/kegiatan/KegiatanMain.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/kegiatan/KegiatanMain.zul
@@ -41,7 +41,7 @@
 
                         <label value="Kode"
                                style="padding-right: 3px"/>
-                        <textbox id="txtb_Kegiatan_No" width="60px" maxlength="2" style="text-transform:uppercase"/>
+                        <textbox id="txtb_Kegiatan_No" width="60px" maxlength="2" />
                         <button id="button_KegiatanList_SearchNo"
                                 height="24px" image="/images/icons/search.gif"
                                 tooltiptext="Cari Berdasarkan Kode"/>
@@ -49,7 +49,7 @@
 
                         <label value="Nama"
                                style="padding-right: 3px"/>
-                        <textbox id="txtb_Kegiatan_Name" width="100px" maxlength="50" style="text-transform:uppercase"/>
+                        <textbox id="txtb_Kegiatan_Name" width="100px" maxlength="50" />
                         <button id="button_KegiatanList_SearchName"
                                 height="24px" image="/images/icons/search.gif"
                                 tooltiptext="Cari Berdasarkan Nama"/>
