--- a/trunk/siak/web/WEB-INF/pages/administrasi/term/TermDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/term/TermDetail.zul
@@ -40,7 +40,7 @@
                                             <label value="*"
                                                    style="color:red;font-size:10px"/>
                                         </hbox>
-                                        <textbox id="txtb_filNr" style="text-transform:uppercase"
+                                        <textbox id="txtb_filNr"
                                                  value="@{controller.term.kdTerm}" readonly="true"
                                                  constraint="no empty" maxlength="4" width="100px"/>
                                     </row>
