--- a/trunk/siak/web/WEB-INF/pages/administrasi/pegawai/mpegawaiDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/pegawai/mpegawaiDetail.zul
@@ -60,15 +60,24 @@
                                             constraint="no empty" maxlength="60" width="60%" />
                                     </row>
                                     <row>
-                                        <label
-                                            value="Tempat Lahir" />
-                                        <textbox
-                                            id="txtb_tempatlahir" value="@{controller.mpegawai.ctmlahir}"
-                                            readonly="true" maxlength="20" width="50%" constraint="no empty" />
+                                        <hbox>
+                                            <label
+                                                value="Tempat Lahir" />
+                                              <label value="*"
+                                                    style="color:red;font-size:10px" />
+                                        </hbox>
+                                            <textbox
+                                                id="txtb_tempatlahir" value="@{controller.mpegawai.ctmlahir}"
+                                                readonly="true" maxlength="20" width="50%" constraint="no empty" />
+
                                     </row>
                                     <row>
-                                        <label
-                                            value="Tanggal Lahir" />
+                                        <hbox>
+                                            <label
+                                                value="Tanggal Lahir" />
+                                            <label value="*"
+                                                        style="color:red;font-size:10px" />
+                                        </hbox>
                                         <datebox
                                             id="txtb_tglahir"  value="@{controller.mpegawai.dtglahir}"
                                             readonly="true" maxlength="20" width="20%" constraint="no empty"  disabled="true" />
